// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Check port reducer > FLOWDESIGNER_PORT_ADD properly add the port to the port Map 1`] = `
{
  "childrens": {},
  "in": {},
  "links": {},
  "nodeTypes": {},
  "nodes": {
    "nodeId": {},
  },
  "out": {
    "nodeId": {
      "portId": {},
    },
  },
  "parents": {},
  "ports": {
    "id1": PortRecord {
      "data": PortData {
        "type": "test",
      },
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
        "type": "test",
      },
      "id": "id1",
      "nodeId": undefined,
    },
    "id2": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
      },
      "id": "id2",
      "nodeId": "test",
    },
    "id3": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
      },
      "id": "id3",
      "nodeId": undefined,
    },
    "portId": PortRecord {
      "data": PortData {
        "flowType": "string",
        "properties": {},
      },
      "graphicalAttributes": PortGraphicalAttributes {
        "portType": "portType",
        "position": {
          "x": undefined,
          "y": undefined,
        },
        "properties": {
          "index": 1,
          "type": "OUTGOING",
        },
      },
      "id": "portId",
      "nodeId": "nodeId",
    },
  },
  "transform": {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check port reducer > FLOWDESIGNER_PORT_ADDS to add multiple ports (portId1, portId2) to port collection 1`] = `
{
  "childrens": {},
  "in": {
    "nodeId": {
      "portId2": {},
      "portId3": {},
    },
  },
  "links": {},
  "nodeTypes": {},
  "nodes": {
    "nodeId": {},
  },
  "out": {
    "nodeId": {
      "portId1": {},
    },
  },
  "parents": {},
  "ports": {
    "id1": PortRecord {
      "data": PortData {
        "type": "test",
      },
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
        "type": "test",
      },
      "id": "id1",
      "nodeId": undefined,
    },
    "id2": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
      },
      "id": "id2",
      "nodeId": "test",
    },
    "id3": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
      },
      "id": "id3",
      "nodeId": undefined,
    },
    "portId1": PortRecord {
      "data": PortData {
        "flowType": "string",
        "properties": {},
      },
      "graphicalAttributes": PortGraphicalAttributes {
        "portType": "portType",
        "position": {
          "x": undefined,
          "y": undefined,
        },
        "properties": {
          "index": 0,
          "type": "OUTGOING",
        },
      },
      "id": "portId1",
      "nodeId": "nodeId",
    },
    "portId2": PortRecord {
      "data": PortData {
        "flowType": "string",
        "properties": {},
      },
      "graphicalAttributes": PortGraphicalAttributes {
        "portType": "portType",
        "position": {
          "x": undefined,
          "y": undefined,
        },
        "properties": {
          "index": 0,
          "type": "INCOMING",
        },
      },
      "id": "portId2",
      "nodeId": "nodeId",
    },
    "portId3": PortRecord {
      "data": PortData {
        "flowType": "string",
        "properties": {},
      },
      "graphicalAttributes": PortGraphicalAttributes {
        "portType": "portType",
        "position": {
          "x": undefined,
          "y": undefined,
        },
        "properties": {
          "index": 1,
          "type": "INCOMING",
        },
      },
      "id": "portId3",
      "nodeId": "nodeId",
    },
  },
  "transform": {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check port reducer > FLOWDESIGNER_PORT_REMOVE should only remove port id1 from ports collection 1`] = `
{
  "childrens": {},
  "in": {},
  "links": {},
  "nodeTypes": {},
  "nodes": {
    "nodeId": {},
  },
  "out": {},
  "parents": {},
  "ports": {
    "id2": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
      },
      "id": "id2",
      "nodeId": "test",
    },
    "id3": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {
          "index": 0,
        },
      },
      "id": "id3",
      "nodeId": undefined,
    },
  },
  "transform": {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check port reducer > FLOWDESIGNER_PORT_REMOVE should only remove port id2 from ports collection if its parent node does not exist 1`] = `
{
  "childrens": {},
  "in": {},
  "links": {},
  "nodeTypes": {},
  "nodes": {
    "nodeId": {},
  },
  "out": {},
  "parents": {},
  "ports": {
    "id1": PortRecord {
      "data": PortData {
        "type": "test",
      },
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
        "type": "test",
      },
      "id": "id1",
      "nodeId": undefined,
    },
    "id3": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
      },
      "id": "id3",
      "nodeId": undefined,
    },
  },
  "transform": {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check port reducer > FLOWDESIGNER_PORT_REMOVE_DATA remove type on port id1 on port data map 1`] = `
{
  "childrens": {},
  "in": {},
  "links": {},
  "nodeTypes": {},
  "nodes": {
    "nodeId": {},
  },
  "out": {},
  "parents": {},
  "ports": {
    "id1": PortRecord {
      "data": PortData {
        "type": "test",
      },
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
        "type": "test",
      },
      "id": "id1",
      "nodeId": undefined,
    },
    "id2": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
      },
      "id": "id2",
      "nodeId": "test",
    },
    "id3": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
      },
      "id": "id3",
      "nodeId": undefined,
    },
  },
  "transform": {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check port reducer > FLOWDESIGNER_PORT_REMOVE_GRAPHICAL_ATTRIBUTES to remove attr on port id1 graphicalAttribute map 1`] = `
{
  "childrens": {},
  "in": {},
  "links": {},
  "nodeTypes": {},
  "nodes": {
    "nodeId": {},
  },
  "out": {},
  "parents": {},
  "ports": {
    "id1": PortRecord {
      "data": PortData {
        "type": "test",
      },
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
        "type": "test",
      },
      "id": "id1",
      "nodeId": undefined,
    },
    "id2": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
      },
      "id": "id2",
      "nodeId": "test",
    },
    "id3": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
      },
      "id": "id3",
      "nodeId": undefined,
    },
  },
  "transform": {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check port reducer > FLOWDESIGNER_PORT_SET_DATA to merge { type: 'string' } on port id1 data map 1`] = `
{
  "childrens": {},
  "in": {},
  "links": {},
  "nodeTypes": {},
  "nodes": {
    "nodeId": {},
  },
  "out": {},
  "parents": {},
  "ports": {
    "id1": PortRecord {
      "data": PortData {
        "type": "string",
      },
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
        "type": "test",
      },
      "id": "id1",
      "nodeId": undefined,
    },
    "id2": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
      },
      "id": "id2",
      "nodeId": "test",
    },
    "id3": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
      },
      "id": "id3",
      "nodeId": undefined,
    },
  },
  "transform": {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check port reducer > FLOWDESIGNER_PORT_SET_GRAPHICAL_ATTRIBUTES to merge { selected: true } on port id1 graphicalAttribute map 1`] = `
{
  "childrens": {},
  "in": {},
  "links": {},
  "nodeTypes": {},
  "nodes": {
    "nodeId": {},
  },
  "out": {},
  "parents": {},
  "ports": {
    "id1": PortRecord {
      "data": PortData {
        "type": "test",
      },
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {
          "selected": true,
        },
        "type": "test",
      },
      "id": "id1",
      "nodeId": undefined,
    },
    "id2": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
      },
      "id": "id2",
      "nodeId": "test",
    },
    "id3": PortRecord {
      "data": PortData {},
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
      },
      "id": "id3",
      "nodeId": undefined,
    },
  },
  "transform": {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;
